<project default="compile_core" basedir=".">
    <!-- === Properties === -->
    <property name="src" location="src"/>
    <property name="build" location="build"/>
    <property name="lib" location="lib"/>
    <property name="jar" location="core.jar"/>
    <property name="target" value="8"/>
    <property name="source" value="8"/>
    <property name="confFile" value="default"/>
    <property name="coloredLogging" value="false"/>
    <property name="version" value="1.0"/>

    <!-- === Build directories === -->
    <property name="build.plugins" location="build/plugins"/>
    <property name="build.core" location="build/core"/>

    <!-- === Dependencies: list of JARs with version/origin === -->
    <property name="deps.core" value="commons-lang3,commons-codec,commons-compress,netty-all,log4j-api,log4j-core,log4j-iostreams,xpp3,xstream,mysql-connector-j,sqlite-jdbc,guava,JDA,emoji-java,json,gitlab4j-api,slf4j-nop,disruptor,guice"/>
    <property name="deps.plugins" value="commons-lang,log4j-api,log4j-core,log4j-iostreams,xpp3,xstream,disruptor,commons-codec"/>

    <!-- === Classpath helpers === -->
    <path id="classpath.core">
        <pathelement location="${lib}/commons-lang3-3.12.0.jar"/>
        <pathelement location="${lib}/commons-codec-1.14.jar"/>
        <pathelement location="${lib}/commons-compress-1.18.jar"/>
        <pathelement location="${lib}/netty-all-4.1.33.Final.jar"/>
        <pathelement location="${lib}/log4j-api-2.17.0.jar"/>
        <pathelement location="${lib}/log4j-core-2.17.0.jar"/>
        <pathelement location="${lib}/log4j-iostreams-2.17.0.jar"/>
        <pathelement location="${lib}/xpp3-1.1.4c.jar"/>
        <pathelement location="${lib}/xstream-1.4.18.jar"/>
        <pathelement location="${lib}/mysql-connector-j-9.4.0.jar"/>
        <pathelement location="${lib}/sqlite-jdbc-3.34.0.jar"/>
        <pathelement location="${lib}/commons-lang-2.6.jar"/>
        <pathelement location="${lib}/guava-30.1.1-jre.jar"/>
        <pathelement location="${lib}/JDA-4.0.0_55-withDependencies.jar"/>
        <pathelement location="${lib}/emoji-java-5.1.1.jar"/>
        <pathelement location="${lib}/json-20190722.jar"/>
        <pathelement location="${lib}/gitlab4j-api-4.12.17.jar"/>
        <pathelement location="${lib}/slf4j-nop-2.0.0-alpha5.jar"/>
        <pathelement location="${lib}/disruptor-3.3.11.jar"/>
        <pathelement location="${lib}/guice-5.0.2-jar-with-dependencies.jar"/>
    </path>

    <path id="classpath.plugins">
        <pathelement location="${lib}/commons-lang-2.6.jar"/>
        <pathelement location="${lib}/log4j-api-2.17.0.jar"/>
        <pathelement location="${lib}/log4j-core-2.17.0.jar"/>
        <pathelement location="${lib}/log4j-iostreams-2.17.0.jar"/>
        <pathelement location="${lib}/xpp3-1.1.4c.jar"/>
        <pathelement location="${lib}/xstream-1.4.9.jar"/>
        <pathelement location="${lib}/disruptor-3.3.5.jar"/>
        <pathelement location="${lib}/mysql-connector-j-9.4.0.jar"/>
        <pathelement location="${lib}/commons-codec-1.14.jar"/>
    </path>

    <!-- === Target: Clean === -->
    <target name="clean">
        <delete dir="${build}"/>
        <delete file="core.jar"/>
        <delete file="plugins.jar"/>
        <delete dir="${build.plugins}"/>
    </target>

    <!-- === Target: Compile Plugins === -->
    <target name="compile_plugins">
        <delete file="plugins.jar"/>
        <delete dir="${build.plugins}"/>
        <mkdir dir="${build.plugins}"/>

        <javac srcdir="plugins" destdir="${build.plugins}" debug="on" includeantruntime="false"
               target="${target}" source="${source}" encoding="UTF-8">
            <classpath>
                <path refid="classpath.plugins"/>
                <pathelement location="core.jar"/>
            </classpath>
            <compilerarg line="-Xlint:deprecation"/>
        </javac>

        <jar basedir="${build.plugins}" destfile="plugins.jar"/>
        <delete dir="${build.plugins}"/>
    </target>

    <!-- === Target: Compile Core === -->
    <target name="compile_core">
        <delete file="${jar}"/>
        <delete dir="${build.core}"/>
        <mkdir dir="${build.core}"/>

        <javac srcdir="${src}" destdir="${build.core}" debug="on" includeantruntime="false"
               target="${target}" source="${source}" encoding="UTF-8">
            <classpath>
                <path refid="classpath.core"/>
            </classpath>
            <compilerarg line="-Xlint:deprecation"/>
        </javac>

        <jar basedir="${build.core}" destfile="${jar}">
            <zipgroupfileset dir="${lib}" includes="*.jar"/>
            <manifest>
                <attribute name="Main-Class" value="com.openrsc.server.Server"/>
            </manifest>
        </jar>

        <delete dir="${build.core}"/>
    </target>

    <!-- === Target: Run Server (with config) === -->
    <target name="runserverzgc">
        <echo message="Using JVM 17+ with ZGC for low-latency garbage collection."/>
        <java classname="com.openrsc.server.Server" fork="true">
            <!-- usage: `ant runserver -DconfFile=preservation` to run server with config file preservation.conf -->
            <arg value="${confFile}.conf"/>
            <jvmarg line="-Xms800M -Xmx2048M -Xdiag -XX:+UseZGC -XX:NewSize=128m -DcoloredLogging=${coloredLogging}"/>
            <classpath>
                <pathelement location="${lib}/disruptor-3.3.0.jar"/>
                <pathelement location="${lib}/log4j-api-2.17.0.jar"/>
                <pathelement location="${lib}/log4j-core-2.17.0.jar"/>
                <pathelement location="${lib}/log4j-iostreams-2.17.0.jar"/>
                <pathelement location="${lib}/xpp3_min-1.1.4c.jar"/>
                <pathelement location="${lib}/xpp3-1.1.4c.jar"/>
                <pathelement location="${lib}/xstream-1.4.9.jar"/>
                <pathelement location="${lib}/mysql-connector-j-9.4.0.jar"/>
                <pathelement location="${lib}/disruptor-3.3.5.jar"/>
                <pathelement location="${lib}/commons-lang-2.6.jar"/>
                <pathelement location="${lib}/*"/>
                <pathelement location="${lib}/commons-codec-1.14.jar"/>
                <pathelement path="${jar}/"/>
            </classpath>
        </java>
    </target>

    <target name="runserver">
        <!-- java 8 compatible jvm args. Add more heap if you can. -->
        <echo message="Using JVM arguments for Java 8 minimum."/>
        <echo message="Upgrade to Java 17 or later for better garbage collection."/>
        <echo message="Launch with 'ant runserverzgc' if you are already on Java 17 or newer."/>
        <java classname="com.openrsc.server.Server" fork="true">
            <!-- usage: `ant runserver -DconfFile=preservation` to run server with config file preservation.conf -->
            <arg value="${confFile}.conf"/>
            <jvmarg line="-XX:+IgnoreUnrecognizedVMOptions -Xdiag -XX:+UseG1GC -XX:MaxGCPauseMillis=100 -XX:+UseBiasedLocking -XX:NewSize=64m -DcoloredLogging=${coloredLogging}"/>
            <classpath>
                <pathelement location="${lib}/disruptor-3.3.0.jar"/>
                <pathelement location="${lib}/log4j-api-2.17.0.jar"/>
                <pathelement location="${lib}/log4j-core-2.17.0.jar"/>
                <pathelement location="${lib}/log4j-iostreams-2.17.0.jar"/>
                <pathelement location="${lib}/xpp3_min-1.1.4c.jar"/>
                <pathelement location="${lib}/xpp3-1.1.4c.jar"/>
                <pathelement location="${lib}/xstream-1.4.9.jar"/>
                <pathelement location="${lib}/mysql-connector-j-9.4.0.jar"/>
                <pathelement location="${lib}/disruptor-3.3.5.jar"/>
                <pathelement location="${lib}/commons-lang-2.6.jar"/>
                <pathelement location="${lib}/*"/>
                <pathelement location="${lib}/commons-codec-1.14.jar"/>
                <pathelement path="${jar}/"/>
            </classpath>
        </java>
    </target>

    <!-- === Target: Compile and Run === -->
    <target name="compile-and-run">
        <antcall target="compile_core"/>
        <antcall target="compile_plugins"/>
        <antcall target="runserver"/>
    </target>

    <!-- === Target: Compile Only === -->
    <target name="compile">
        <antcall target="compile_core"/>
        <antcall target="compile_plugins"/>
    </target>

    <!-- === Default Target === -->
    <target name="default" depends="compile"/>
</project>
